--- a/src/app/public/contact/contact.component.html
+++ b/src/app/public/contact/contact.component.html
@@ -2,6 +2,77 @@
   <h3>Contact Page</h3>
   <p>Bootstrap is the most popular HTML, CSS...</p>
 </div>
-<p>
-  contact works!
-</p>
+<div class="row">
+  <div class="col-md-6">
+    <h3>Contact Form</h3>
+    <div class="alert alert-success" *ngIf="submitted && !errorMsg">
+      {{successMsg}}
+    </div>
+    <div class="alert alert-danger" *ngIf="errorMsg">
+      {{errorMsg}}
+    </div>
+    <!--
+    Hide the after submit: *ngIf="!submitted"
+      <form #userForm="ngForm" *ngIf="!submitted" (ngSubmit)="onSubmit()" novalidate>
+        <form #emailForm="ngForm" (ngSubmit)="emailSubmit(); emailForm.reset()" novalidate>
+    -->
+    <form #emailForm="ngForm" (ngSubmit)="emailSubmit(); emailForm.reset()" novalidate>
+      <!--
+          <h5>Form Values</h5>
+          {{emailForm.value | json }}
+          <hr>
+          <h5>Email Model Values</h5>
+          {{emailModel | json }}
+          <hr />
+      -->
+      <div class="form-group">
+        <label>Name *</label>
+        <input type="text" name="SenderName" #SenderName="ngModel" [(ngModel)]="emailModel.SenderName"
+               class="form-control" required [class.is-invalid]="SenderName.invalid && SenderName.touched">
+        <small class="text-danger" [class.d-none]="SenderName.valid || SenderName.untouched">Name is required</small>
+      </div>
+
+      <div class="form-group">
+        <label>Email *</label>
+        <input type="email" name="SenderEmail" #SenderEmail="ngModel" [(ngModel)]="emailModel.SenderEmail"
+               class="form-control" required [class.is-invalid]="SenderEmail.invalid && SenderEmail.touched"
+               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+        <div *ngIf="SenderEmail.errors && (SenderEmail.invalid || SenderEmail.touched)">
+          <small class="text-danger" *ngIf="SenderEmail.errors.required"
+                 [class.d-none]="SenderEmail.valid || SenderEmail.untouched">Email address is required</small>
+          <small class="text-danger" *ngIf="SenderEmail.errors.pattern">Email address must be valid</small>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label>Phone</label>
+        <input type="tel" name="SenderPhone" #SenderPhone="ngModel" [(ngModel)]="emailModel.SenderPhone"
+               class="form-control" [class.is-invalid]="SenderPhone.invalid && SenderPhone.touched"
+               pattern="^\(?([0-9]{3})\)?[-. ]?([0-9]{3})[-. ]?([0-9]{4})$">
+        <div *ngIf="SenderPhone.errors && (SenderPhone.invalid || SenderPhone.touched)">
+          <small class="text-danger" *ngIf="SenderPhone.errors.required">Phone number is required</small>
+          <small class="text-danger" *ngIf="SenderPhone.errors.pattern">Phone number must be valid format</small>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label>Message *</label>
+        <textarea rows="4" cols="65" name="SenderMessage" #SenderMessage="ngModel" [(ngModel)]="emailModel.SenderMessage"
+                  class="form-control" required [class.is-invalid]="SenderMessage.invalid && SenderMessage.touched"></textarea>
+        <small class="text-danger" [class.d-none]="SenderMessage.valid || SenderMessage.untouched">Message is required</small>
+      </div>
+
+      <div class="form-check mb-3">
+        <input class="form-check-input" type="checkbox" name="SenderSubscribe" [(ngModel)]="emailModel.SenderSubscribe">
+        <label class="form-check-label">
+          Send me promotional offers
+        </label>
+      </div>
+      <button class="btn btn-primary" [disabled]="emailForm.form.invalid" type="submit">Send Inquiry</button>
+    </form>
+  </div>
+  <div class="col-md-6">
+    <h3>Something here...</h3>
+  </div>
+</div>
+
